--- a/C19V/templates/home.html
+++ b/C19V/templates/home.html
@@ -7,6 +7,46 @@
     <title>C-19 Vaccine</title>
 </head>
 <body>
-    <h1> hello mf </h1>
+    <h1> <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <!------ Include the above in your HEAD tag ---------->
+        
+        <div class="container">
+          <div class="row">
+        
+            <div class="main">
+              <div class="row">
+                <div class="col-xs-6 col-sm-6 col-md-6">
+              <div class="login-or">
+                <span class="span-or"></span>
+              </div>
+        
+              <form role="form">
+                <div class="form-group">
+                  <label for="inputUsernameEmail">Phone Number</label>
+                  <input type="number" class="form-control" id="inputUsernameEmail">
+                </div>
+                <div class="form-group">
+                  <label for="inputPassword">Password</label>
+                  <input type="password" class="form-control" id="inputPassword">
+                </div>
+                <div class="checkbox pull-right">
+                  <label>
+                    <input type="checkbox">
+                    Remember me </label>
+                </div>
+                <button type="submit" class="btn btn btn-primary">
+                  Log In
+                </button>
+              </form>
+              <h3>Not a patient?</h3>
+              <a href="/C19V/templates/vaccinationcentre.html" class="btn btn-lg btn-info btn-block">Vaccination Centre</a>
+            </div>
+          </div>
+            </div>
+            
+          </div>
+        </div> </h1>
 </body>
 </html>
