--- a/C19V/templates/login.html
+++ b/C19V/templates/login.html
@@ -25,7 +25,7 @@
         
               <form role="form">
                 <div class="form-group">
-                  <label for="inputUsernameEmail">Phone Number</label>
+                  <label for="inputUsernameEmail">Mobile Number</label>
                   <input type="number" class="form-control" id="inputUsernameEmail">
                 </div>
                 <div class="form-group">
@@ -41,7 +41,7 @@
                   Log In
                 </button>
               </form>
-              <h3>Not a patient?</h3>
+              <h3>Not patient?</h3>
               <a href="VaccinationCentres" class="btn btn-lg btn-info btn-block">Vaccination Centre</a>
             </div>
           </div>
