--- a/C19V/templates/login.html
+++ b/C19V/templates/login.html
@@ -11,7 +11,6 @@
     <h1> <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-        <!------ Include the above in your HEAD tag ---------->
         
         <div class="container">
           <div class="row">
@@ -41,8 +40,8 @@
                   Log In
                 </button>
               </form>
-              <h3>Not a patient?</h3>
-              <a href="VaccinationCentres" class="btn btn-lg btn-info btn-block">Vaccination Centre</a>
+              <h3>Not yet Vaccinated?</h3>
+              <a href="VaccinationCentres" class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
             </div>
           </div>
             </div>
