--- a/C19V/templates/login.html
+++ b/C19V/templates/login.html
@@ -25,11 +25,11 @@
               <form role="form">
                 <div class="form-group">
                   <label for="inputUsernameEmail">Mobile Number</label>
-                  <input type="number" class="form-control" id="inputUsernameEmail">
+                  <input type="number" class="form-control" id="phone_no">
                 </div>
                 <div class="form-group">
-                  <label for="inputPassword">Password</label>
-                  <input type="password" class="form-control" id="inputPassword">
+                  <label for="inputPassword">Date of Birth</label>
+                  <input type="date" class="form-control" id="dob">
                 </div>
                 <div class="checkbox pull-right">
                   <label>
@@ -40,13 +40,8 @@
                   Log In
                 </button>
               </form>
-<<<<<<< HEAD
               <h3>Not yet Vaccinated?</h3>
               <a href="VaccinationCentres" class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
-=======
-              <h3>Not patient?</h3>
-              <a href="VaccinationCentres" class="btn btn-lg btn-info btn-block">Vaccination Centre</a>
->>>>>>> 25f48d403e249c4728cbb65e5ebdb56dd9562b89
             </div>
           </div>
             </div>
