--- a/C19V/templates/login.html
+++ b/C19V/templates/login.html
@@ -11,42 +11,49 @@
     <h1> <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-        
+
         <div class="container">
-          <div class="row">
-        
-            <div class="main">
-              <div class="row">
-                <div class="col-xs-6 col-sm-6 col-md-6">
-              <div class="login-or">
-                <span class="span-or"></span>
-              </div>
-        
-              <form role="form">
-                <div class="form-group">
-                  <label for="inputUsernameEmail">Mobile Number</label>
-                  <input type="number" class="form-control" id="phone_no">
-                </div>
-                <div class="form-group">
-                  <label for="inputPassword">Date of Birth</label>
-                  <input type="date" class="form-control" id="dob">
-                </div>
-                <div class="checkbox pull-right">
-                  <label>
-                    <input type="checkbox">
-                    Remember me </label>
-                </div>
-                <button type="submit" class="btn btn btn-primary">
-                  Log In
-                </button>
-              </form>
-              <h3>Not yet Vaccinated?</h3>
-              <a href="VaccinationCentres" class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
-            </div>
-          </div>
-            </div>
-            
-          </div>
-        </div> </h1>
+  <div class="row">
+
+    <div class="main">
+
+      <h3>Please Log In, or <a href="#">Sign Up</a></h3>
+      <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6">
+          <a href="#" class="btn btn-lg btn-primary btn-block">Patient</a>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6">
+          <a href="VaccinationCentres" class="btn btn-lg btn-info btn-block">Vaccination centres</a>
+        </div>
+      </div>
+      <div class="login-or">
+        <hr class="hr-or">
+        <span class="span-or">or</span>
+      </div>
+
+      <form role="form">
+        <div class="form-group">
+          <label for="phone_no">Mobile Number</label>
+          <input type="tel" class="form-control" id="phone_no">
+        </div>
+        <div class="form-group">
+          <label for="dob">Date of Birth</label>
+          <input type="date" class="form-control" id="dob">
+        </div>
+        <div class="checkbox pull-right">
+          <label>
+            <input type="checkbox">
+            Remember me </label>
+        </div>
+        <button type="submit" class="btn btn btn-primary">
+          Log In
+        </button>
+      </form>
+      <h3>Not yet Vaccinated?</h3>
+              <a href="#" class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
+    </div>
+    
+  </div>
+</div>
 </body>
 </html>
