--- a/C19V/templates/login.html
+++ b/C19V/templates/login.html
@@ -23,13 +23,10 @@
           <a href="#" class="btn btn-lg btn-primary btn-block">Patient</a>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="VaccinationCentres" class="btn btn-lg btn-info btn-block">Vaccination centres</a>
+          <a href="{% url 'centres' %}" class="btn btn-lg btn-info btn-block">Vaccination centres</a>
         </div>
       </div>
-      <div class="login-or">
-        <hr class="hr-or">
-        <span class="span-or">or</span>
-      </div>
+
 
       <form role="form">
         <div class="form-group">
@@ -50,7 +47,7 @@
         </button>
       </form>
       <h3>Not yet Vaccinated?</h3>
-              <a href="#" class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
+              <a href="#" class="btn btn-lg btn-danger btn-block">NearBy Vaccination Centre</a>
     </div>
     
   </div>
