--- a/C19V/templates/home.html
+++ b/C19V/templates/home.html
@@ -11,5 +11,10 @@
 <body>
     <h1> hello mf </h1>
     <img src="{% static 'images/corona.jpeg' %}">
+    <hr>
+    <a href="{% url 'create_person' %}">Create a Person</a>
+    {% block content %}
+
+    {% endblock %}
 </body>
 </html>
