--- a/C19V/templates/navbar.html
+++ b/C19V/templates/navbar.html
@@ -1,2 +1,25 @@
-<h1> Navbar </h1>
-<hr>
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/navbar.css'%}"
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Near by vaccination centres</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">health report of an individual</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">statistics of vaccinated people</a>
+      </li>
+      
+    </ul>
+  </div>
+</nav>
