--- a/C19V/templates/navbar.html
+++ b/C19V/templates/navbar.html
@@ -8,16 +8,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Near by vaccination centres</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">health report of an individual</a>
+        <a class="nav-link" href="{% url 'health' %}">health report of an individual</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">statistics of vaccinated people</a>
+        <a class="nav-link" href="{% url 'stats' %}">statistics of vaccinated people</a>
       </li>
       
     </ul>
