--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -2,7 +2,71 @@
 {% load static %}
 
 {% block content %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/patient_home.css'%}">
 
-<h1>DashBoard</h1>
+    <div class="row gutters-sm">
+        <div class="col-md-4 mb-3">
+            <div class="card">
+                <div class="card-body">
+                  <div class="d-flex flex-column align-items-center text-center">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                    <div class="mt-3">
+                      <h1>Patient details </h1>
+                    </div>  
+                </div>
+             </div>
+        </div>
+    </div>
+
+<div class="col-md-8">
+              <div class="card mb-3">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h3 class="mb-0">Full Name</h3>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      displays patient name 
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h3 class="mb-0">Phone Number</h3>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      +91*******
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h3 class="mb-0">Gender</h3>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      Male or female or others
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h3 class="mb-0">Vaccinated Place</h3>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                    hyderabad
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h3 class="mb-0">Vaccination Centre Address</h3>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      mig-78/9 hyd
+                    </div>
+                  </div>
+                </div>
+              </div>
 
 {% endblock %}
