edited some changes in patient_home.html code

--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/css/patient_home.css'%}">
-
+<center>
     <div class="row gutters-sm">
         <div class="col-md-4 mb-3">
             <div class="card">
@@ -18,7 +18,7 @@
              </div>
         </div>
     </div>
-
+</center>
 <div class="col-md-8">
               <div class="card mb-3">
                 <div class="card-body">
