edited patient_home.css file

--- a/C19V/static/css/patient_home.css
+++ b/C19V/static/css/patient_home.css
@@ -2,7 +2,7 @@ body {
     margin-top: 20px;
     color: #1a202c;
     text-align: left;
-    background-color: #e2e8f0;
+    background-color: #b7c539;
 }
 
 .main-body {
@@ -19,10 +19,14 @@ body {
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: rgb(101, 164, 216);
     background-clip: border-box;
     border: 0 solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
+}
+
+.row {
+    width: 75%;
 }
 
 .card-body {
@@ -57,4 +61,8 @@ body {
 
 .shadow-none {
     box-shadow: none!important;
+}
+
+.col-md-8 {
+    width: 75%;
 }
