added padding in patient_home.html

--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -8,7 +8,7 @@
   <div class="container-md-8">
     <div class="card mb-3">
       <div class="card-body">
-        <div class="d-flex flex-column align-items-center text-center">
+        <div class="jumbotron align-items-center text-center">
           <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
           <div class="mt-3">
             <h1>PATIENT DETAILS</h1>
@@ -16,63 +16,63 @@
         </div>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0">Full Name</h6>
+            <h6 class="mb-0 pl-4">Full Name</h6>
           </div>
-          <div class="col-sm-9 text-secondary">
+          <div class="col-sm-9 pl-4 text-secondary">
             displays patient name 
           </div>
         </div>
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0">Gender</h6>
+            <h6 class="mb-0 pl-4">Gender</h6>
           </div>
-          <div class="col-sm-9 text-secondary">
+          <div class="col-sm-9 pl-4 text-secondary">
             Male or female
           </div>
         </div>
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0">Date of Birth</h6>
+            <h6 class="mb-0 pl-4">Date of Birth</h6>
           </div>
-          <div class="col-sm-9 text-secondary">
+          <div class="col-sm-9 pl-4 text-secondary">
             displays DOB
           </div>
         </div>
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0">Phone Number</h6>
+            <h6 class="mb-0 pl-4">Phone Number</h6>
           </div>
-          <div class="col-sm-9 text-secondary">
+          <div class="col-sm-9 pl-4 text-secondary">
             +91*******
           </div>
         </div>
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0">Place</h6>
+            <h6 class="mb-0 pl-4">Place</h6>
           </div>
-          <div class="col-sm-9 text-secondary">
+          <div class="col-sm-9 pl-4 text-secondary">
             hyderabad
           </div>
         </div>
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0">Vaccination Centre</h6>
+            <h6 class="mb-0 pl-4">Vaccination Centre</h6>
           </div>
-          <div class="col-sm-9 text-secondary">
+          <div class="col-sm-9 pl-4 text-secondary">
             Vaccination centre name
           </div>
         </div>
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0">Previous Status</h6>
+            <h6 class="mb-0 pl-4">Previous Status</h6>
           </div>
-          <div class="col-sm-9 text-secondary">
+          <div class="col-sm-9 pl-4 text-secondary">
             Fine/Danger
           </div>
         </div>
