--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -76,6 +76,23 @@
             Fine/Danger
           </div>
         </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">Progress</h6>
+          </div>
+          <div class="progress">
+            <div class="progress-bar bg-success" style="width:40%">
+              Free Space
+            </div>
+            <div class="progress-bar bg-warning" style="width:10%">
+              Warning
+            </div>
+            <div class="progress-bar bg-danger" style="width:20%">
+              Danger
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>  
