--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -81,16 +81,10 @@
           <div class="col-sm-3">
             <h6 class="mb-0 pl-4">Progress</h6>
           </div>
-          <div class="progress">
-            <div class="progress-bar bg-success" style="width:40%">
-              Free Space
-            </div>
-            <div class="progress-bar bg-warning" style="width:10%">
-              Warning
-            </div>
-            <div class="progress-bar bg-danger" style="width:20%">
-              Danger
-            </div>
+          <div class="progress col-sm-9">
+            <div class="progress-bar bg-success" style="width:40%">40%</div>
+            <div class="progress-bar bg-warning" style="width:10%">10%</div>
+            <div class="progress-bar bg-danger" style="width:20%">20%</div>
           </div>
         </div>
       </div>
