--- a/C19V/templates/vaccinationcentre.html
+++ b/C19V/templates/vaccinationcentre.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>C-19 Vaccine</title>
     <link rel="stylesheet" href="{% static "css/login.css" %}">
 </head>
 <body>
@@ -20,10 +20,10 @@
       <br>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="#" class="btn btn-lg btn-primary btn-block">Vaccination Centre</a>
+          <a  href="{% url 'login' %}" class="btn btn-lg btn-primary btn-block">Patient</a>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a  href="{% url 'login' %}" class="btn btn-lg btn-info btn-block">Patient</a>  <! -- Should we go back if we press patient??-->
+          <a href="" class="btn btn-lg btn-info btn-block">Vaccination Centre</a> <! -- Should we go back if we press patient??-->
         </div>
       </div>
       <div class="login-or">
