--- a/C19V/templates/vaccinationcentre.html
+++ b/C19V/templates/vaccinationcentre.html
@@ -23,7 +23,7 @@
           <a  href="{% url 'login' %}" class="btn btn-lg btn-primary btn-block">Patient</a>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="" class="btn btn-lg btn-info btn-block">Vaccination Centre</a> <! -- Should we go back if we press patient??-->
+          <a href="" class="btn btn-lg btn-info btn-block">Vaccination Centres</a> <! -- Should we go back if we press patient??-->
         </div>
       </div>
       <div class="login-or">
