--- a/C19V/templates/patient_health.html
+++ b/C19V/templates/patient_health.html
@@ -2,7 +2,97 @@
 {% load static %}
 
 {% block content %}
+<br>
+<h1 class="text-center">Current Health Status</h1><br>
+<h2 class="text-center text-success" ><strong>Good</strong> <i class="fas fa-grin"></i></h2><br><!--<i class="fas fa-meh"></i>(normal) <i class="far fa-frown"></i>(bad)-->
+<div class="container">
+    <div class="table-responsive">
+        <table class="table table-dark table-striped">
+            <thead>
+                <tr>
+                    <th>S.no</th>
+                    <th>Date</th>
+                    <th>Day</th>
+                    <th>Time</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>12-09-20</td>
+                    <td>Thursday</td>
+                    <td>12:11:45</td>
+                    <td>Good</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>19-09-20</td>
+                    <td>Monday</td>
+                    <td>10:08:11</td>
+                    <td>Better</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>22-09-20</td>
+                    <td>Sunday</td>
+                    <td>1:11:05</td>
+                    <td>Bad</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>22-09-20</td>
+                    <td>Sunday</td>
+                    <td>1:11:05</td>
+                    <td>Bad</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>22-09-20</td>
+                    <td>Sunday</td>
+                    <td>1:11:05</td>
+                    <td>Bad</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>22-09-20</td>
+                    <td>Sunday</td>
+                    <td>1:11:05</td>
+                    <td>Bad</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>22-09-20</td>
+                    <td>Sunday</td>
+                    <td>1:11:05</td>
+                    <td>Bad</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>22-09-20</td>
+                    <td>Sunday</td>
+                    <td>1:11:05</td>
+                    <td>Bad</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>22-09-20</td>
+                    <td>Sunday</td>
+                    <td>1:11:05</td>
+                    <td>Bad</td>
+                </tr>
+            </tbody>
+        </table>
+    
+    </div><br>
+    <div class="row">
+        <div class="col text-center">
+            <button type="button" class="btn btn-dark">Update Status?</button>
+        </div>
+    </div>
+ 
 
-<h1>Health Report</h1>
+</div>
+
 
 {% endblock %}
