--- a/C19V/templates/main.html
+++ b/C19V/templates/main.html
@@ -16,6 +16,6 @@
 
 
     {% endblock %}
-     
+    <script src="https://kit.fontawesome.com/f8b62a635e.js" crossorigin="anonymous"></script>
 </body>
 </html>
