--- a/C19V/templates/createperson.html
+++ b/C19V/templates/createperson.html
@@ -6,7 +6,7 @@
 <form action="{% url 'create_person' %}" method="POST">
     {% csrf_token %}
 
-    {{ form }}
+    {{ form.as_p }}
     <input type='submit' name='Submit'>
 </form> 
 
