--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -1,8 +1,9 @@
 {% extends 'main.html' %}
 {% load static %}
 
+{% include 'navbar.html' %}
+
 {% block content %}
-{% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/css/patient_home.css'%}">
 <centre>
   <div class="container-md-8">
