added dynamic navbar

--- a/C19V/templates/navbar.html
+++ b/C19V/templates/navbar.html
@@ -8,6 +8,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
+      {% if block='Patient' %}
+       
       <li class="nav-item {% if nbar == 'home' %}active{% endif %}">
         <a class="nav-link" href="{% url 'home' %}">Home </a>
       </li>
@@ -17,6 +19,21 @@
       <li class="nav-item {% if nbar == 'stats' %}active{% endif %}">
         <a class="nav-link" href="{% url 'stats' %}">Statistics of Vaccinated People </a>
       </li> 
+
+      {% else %}
+
+      <li class="nav-item {% if nbar == 'dashboard' %}active{% endif %}">
+        <a class="nav-link" href="{% url 'dashboard' %}"> Dashboard </a>
+      </li>
+      <li class="nav-item {% if nbar == 'report' %}active{% endif %}">
+        <a class="nav-link" href="{% url 'report' %}"> Report </a>
+      </li>
+      <li class="nav-item {% if nbar == 'statsVC' %}active{% endif %}">
+        <a class="nav-link" href="{% url 'statsVC' %}">Statistics </a>
+      </li> 
+
+      {% endif %}
+
     </ul>
   </div>
 </nav>
