--- a/C19V/templates/navbar.html
+++ b/C19V/templates/navbar.html
@@ -8,7 +8,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      {% if block='Patient' %}
+      {% if block == 'Patient' %}
        
       <li class="nav-item {% if nbar == 'home' %}active{% endif %}">
         <a class="nav-link" href="{% url 'home' %}">Home </a>
