Added vc_home.html page

--- a/C19V/templates/vc_home.html
+++ b/C19V/templates/vc_home.html
@@ -3,6 +3,101 @@
 
 {% block content %}
 
-<h1>DashBoard</h1>
-
+<link rel="stylesheet" type="text/css" href="{% static '/css/patient_home.css'%}">
+<centre>
+  <div class="container-md-8">
+    <div class="card mb-3">
+      <div class="card-body">
+        <div class="jumbotron align-items-center text-center">
+          <img src="{% static '/images/vaccination-centre.jpg'%}" alt="Admin"  height ="10%" width="20%">
+          <div class="mt-3">
+            <h1>VACCINATION CENTRE DETAILS</h1>
+          </div>  
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">Vaccination Centre  Name</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            displays Centre name 
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">Email id</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            displays email.id
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">Phone number</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            +91*******
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">Vaccination Centre Address</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            mig-34/5
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">City</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            hyderabad
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">State</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            Telengana
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">pin code</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            533106
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">Opening time</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            9:00 AM
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">Closing time</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            9:00pm
+          </div>
+        </div>
+        <hr>
+        
+      </div>
+    </div>
+  </div>  
+</centre>
 {% endblock %}
