--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -20,7 +20,7 @@
             <h6 class="mb-0 pl-4">Full Name</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            displays patient name 
+            {{ person.name }}
           </div>
         </div>
         <hr>
@@ -29,7 +29,11 @@
             <h6 class="mb-0 pl-4">Gender</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            Male or female
+            {% if person.gender == 'M' %}
+              Male
+            {% else %}
+              Female
+            {% endif %}    
           </div>
         </div>
         <hr>
@@ -38,7 +42,7 @@
             <h6 class="mb-0 pl-4">Date of Birth</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            displays DOB
+            {{person.dob | date}}
           </div>
         </div>
         <hr>
@@ -47,7 +51,7 @@
             <h6 class="mb-0 pl-4">Phone Number</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            +91*******
+            {{person.phone_no}}
           </div>
         </div>
         <hr>
@@ -56,7 +60,7 @@
             <h6 class="mb-0 pl-4">Place</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            hyderabad
+            {{ person.centre.city }}
           </div>
         </div>
         <hr>
@@ -65,7 +69,7 @@
             <h6 class="mb-0 pl-4">Vaccination Centre</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            Vaccination centre name
+            {{ person.centre.name }}
           </div>
         </div>
         <hr>
@@ -74,7 +78,7 @@
             <h6 class="mb-0 pl-4">Previous Status</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            Fine/Danger
+            {{status.status}}
           </div>
         </div>
         <hr>
