--- a/C19V/templates/vc_login.html
+++ b/C19V/templates/vc_login.html
@@ -20,10 +20,10 @@
       <br>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a  href="{% url 'login' %}" class="btn btn-lg btn-primary btn-block">Patient</a>
+          <a href="" class="btn btn-lg btn-info btn-block">Vaccination Centres </a>         
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="" class="btn btn-lg btn-info btn-block">Vaccination Centres </a> <! -- Should we go back if we press patient??-->
+          <a  href="{% url 'login' %}" class="btn btn-lg btn-primary btn-block">Patient</a>
         </div>
       </div>
       <div class="login-or">
@@ -52,37 +52,17 @@
           </button>
         </form>
       </div>
-      
-      <div class="signupbox sin ">
 
-        <form role="form" method="POST" action='' >
-          {% csrf_token %}
-          <div class="form-group">
-            <label for="inputUsernameEmail">Username</label>
-            <input type="text" class="form-control" id="inputUsernameEmail">
-          </div>
-          <div class="form-group">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail">
-          </div>
-          <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword">
-          </div>
-          <button type="submit" class="btn btn btn-primary">
-            Sign Up
-          </button>
-        </form>
+      <div>
+        
+      <h3>Not yet Registered?</h3>
+      <a href="{% url 'registervc' %}">Sign Up</a>
 
       </div>
 
-      <div class="switch">
-        <p class="switch_text">Create an account?</p> <span class="switch_button">Sign up</span>
-      </div>
     </div>
   </div>
 </div>
-<script src="{% static 'js/login.js' %}" ></script>
 
 </body>
 </html>
