--- a/C19V/static/css/vaccination.css
+++ b/C19V/static/css/vaccination.css
@@ -1,3 +1,9 @@
+*{
+   margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
 body {
   padding-top: 15px;
   font-size: 12px;
