--- a/C19V/templates/vc_report.html
+++ b/C19V/templates/vc_report.html
@@ -49,7 +49,7 @@
 		<h5>PATIENTS:</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Search for patient details</a>
+			<a class="btn btn-dark  btn-sm btn-block" href="">Search for Patient Details</a>
 			<table class="table table-sm">
 				<tr>
 					<th></th>
@@ -73,7 +73,7 @@
 		<h5>LAST 5 Vaccinated people</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Add a person</a>
+			<a class="btn btn-dark  btn-sm btn-block" href="">Add a Person</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Name</th>
