--- a/C19V/templates/patient_health.html
+++ b/C19V/templates/patient_health.html
@@ -4,90 +4,36 @@
 {% block content %}
 <br>
 <h1 class="text-center">Current Health Status</h1><br>
-<h2 class="text-center text-success" ><strong>Good</strong> <i class="fas fa-grin"></i></h2><br><!--<i class="fas fa-meh"></i>(normal) <i class="far fa-frown"></i>(bad)-->
+<h2 class="text-center {% if last.status == 'Good' %}text-success{% elif last.status == 'Ok' %}text-warning{% else %}text-danger{% endif %}" >
+    <strong>{{last.status}}</strong> <i class="fas {% if last.status == 'Good' %} fa-grin{% elif last.status == 'Ok' %}fa-meh{% else %}
+        fa-frown{% endif %}"></i></h2><br>
 <div class="container">
     <div class="table-responsive">
         <table class="table table-dark table-striped">
             <thead>
                 <tr>
-                    <th>S.no</th>
-                    <th>Date</th>
                     <th>Day</th>
+                    <th>Date</th>
                     <th>Time</th>
                     <th>Status</th>
                 </tr>
             </thead>
             <tbody>
+                {% for stat in status %}
                 <tr>
-                    <td>1</td>
-                    <td>12-09-20</td>
-                    <td>Thursday</td>
-                    <td>12:11:45</td>
-                    <td>Good</td>
+                    <td>Day{{forloop.counter}}</td>
+                    <td>{{stat.date}}</td>
+                    <td>{{stat.time}}</td>
+                    <td>{{stat.status}}</td>
                 </tr>
-                <tr>
-                    <td>1</td>
-                    <td>19-09-20</td>
-                    <td>Monday</td>
-                    <td>10:08:11</td>
-                    <td>Better</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>22-09-20</td>
-                    <td>Sunday</td>
-                    <td>1:11:05</td>
-                    <td>Bad</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>22-09-20</td>
-                    <td>Sunday</td>
-                    <td>1:11:05</td>
-                    <td>Bad</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>22-09-20</td>
-                    <td>Sunday</td>
-                    <td>1:11:05</td>
-                    <td>Bad</td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td>22-09-20</td>
-                    <td>Sunday</td>
-                    <td>1:11:05</td>
-                    <td>Bad</td>
-                </tr>
-                <tr>
-                    <td>7</td>
-                    <td>22-09-20</td>
-                    <td>Sunday</td>
-                    <td>1:11:05</td>
-                    <td>Bad</td>
-                </tr>
-                <tr>
-                    <td>8</td>
-                    <td>22-09-20</td>
-                    <td>Sunday</td>
-                    <td>1:11:05</td>
-                    <td>Bad</td>
-                </tr>
-                <tr>
-                    <td>9</td>
-                    <td>22-09-20</td>
-                    <td>Sunday</td>
-                    <td>1:11:05</td>
-                    <td>Bad</td>
-                </tr>
+                {% endfor %}
             </tbody>
         </table>
     
     </div><br>
     <div class="row">
         <div class="col text-center">
-            <button type="button" class="btn btn-dark">Update Status?</button>
+            <button type="button" class="btn btn-dark"><a href="{% url 'create_status' person.id %}">Update Status</a></button>
         </div>
     </div>
  
