added progress bar

--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -87,9 +87,9 @@
             <h6 class="mb-0 pl-4">Progress</h6>
           </div>
           <div class="progress col-sm-9">
-            <div class="progress-bar bg-success" style="width:40%">40%</div>
-            <div class="progress-bar bg-warning" style="width:10%">10%</div>
-            <div class="progress-bar bg-danger" style="width:20%">20%</div>
+            <div class="progress-bar bg-success" style="width:{{green}}%">{{green}}</div>
+            <div class="progress-bar bg-warning" style="width:{{yellow}}%">{{yellow}}</div>
+            <div class="progress-bar bg-danger" style="width:{{red}}%">{{red}}</div>
           </div>
         </div>
       </div>
