--- a/C19V/templates/patient_login.html
+++ b/C19V/templates/patient_login.html
@@ -11,17 +11,24 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
-  <div class="container">
+  
+  
+  <div class="container" style="margin-top:3%;width:30%;font-family:sans-serif;">
+    <div class="row">
+      <div class="col-4 mx-auto text-center">
+        <img src="{% static '/images/corona1.jpeg' %}" class="rounded-circle" alt="Corona1" width="150" height="150">
+      </div>
+    </div>
+    
     <div class="row">
       <div class="main">
       <br>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="#" class="btn btn-lg btn-primary btn-block">Patient</a>
+          <a href="#" style="background-color:black;" class="btn btn-lg btn-primary btn-block">Patient</a>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="{% url 'loginvc' %}" class="btn btn-lg btn-info btn-block">Vaccination Centres</a>
+          <a href="{% url 'loginvc' %}" style="background-color:#696969;" class="btn btn-lg btn-primary btn-block">Vaccination Centres</a>
         </div>
       </div>
       <div class="login-or">
@@ -42,12 +49,12 @@
             <input type="checkbox">
             Remember me </label>
         </div>
-        <button type="submit" class="btn btn btn-primary">
+        <button type="submit" style="background-color:black;" class="btn btn btn-primary">
           Log In
         </button>
       </form>
       <h3>Not yet Vaccinated?</h3>
-              <a href="#" class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
+              <a href="#" style="background-color:#696969;"class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
     </div>
     
   </div>
