styled statistics page

--- a/C19V/templates/statistics.html
+++ b/C19V/templates/statistics.html
@@ -10,7 +10,7 @@
 <script src="{% static '/js/statistics.js' %}"></script>
 <div class="container" style="font-family: sans-serif;"><br>
     <h1 class="text-center">Statistics</h1>
-    <div class="btn-group" style="margin-top: 2%;float:left;">
+    <div class="btn-group" style="margin-top: 3%;float:left;">
         <div class="dropdown">
             <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown">
                 Dropdown button
@@ -24,7 +24,7 @@
         </div>
      
     </div>
-    <div class="btn-group" style="margin-top: 2%;margin-left: 28%;">
+    <div class="btn-group" style="margin-top: 3%;margin-left: 28%;">
         <div class="dropdown">
             <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown">
                 Dropdown button
@@ -37,7 +37,7 @@
         </div>
     
     </div>
-    <div class="btn-group" style="margin-top: 2%;float:right;">
+    <div class="btn-group" style="margin-top: 3%;float:right;">
         <div class="dropdown">
             <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown">
                 Dropdown button
@@ -45,15 +45,37 @@
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">Succeed</a>
                 <a class="dropdown-item" href="#">Failure</a>
-    
             </div>
         </div>
-    
     </div>
       
+</div><br><br>
+<div class="container" style="font-family: sans-serif;margin-top: 6%;margin-left: 30%;">
+    <div class="chart">
+        <ul class="numbers">
+            <li><span>100%</span></li>
+            <li><span>50%</span></li>
+            <li><span>0%</span></li>
+        </ul>
+        <ul class="bars">
+            <li>
+                <div class="bar" data-percentage="50"></div><span>Center 01</span>
+            </li>
+            <li>
+                <div class="bar" data-percentage="30"></div><span>Center 02</span>
+            </li>
+            <li>
+                <div class="bar" data-percentage="60"></div><span>Center 03</span>
+            </li>
+            <li>
+                <div class="bar" data-percentage="90"></div><span>Center 04</span>
+            </li>
+            <li>
+                <div class="bar" data-percentage="80"></div><span>Center 05</span>
+            </li>
+        </ul>
+    </div>
 
-   
-    
 </div>
 
 
